# GameOfLife_CPlusPlus_Godot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
design/: Requirements.md  UIDesign.odg
godotModule/: gol.cpp  gol.hpp
src/: CMakeLists.txt  ConsoleDemo.cpp  GameOfLife.cpp  GameOfLife.hpp  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  GameOfLifeTests.cpp
